--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,15 @@
 			<version>1.2</version>
 		</dependency>
 	
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<!-- Spring-Test 의존성 주입 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>3.1.1.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
